[package]
name = "Lumpy-Space-Princess"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
dotenv = "0.15.0"
poise = "0.6.1"
regex = "1.11.1"
sqlx = {  version = "0.8.3", features = ["sqlite", "chrono", "runtime-tokio"] }
tokio = {  version = "1.43.0", features = ["rt-multi-thread"] }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"
